# HKB-firmware

./: Cargo.toml  Embedded.toml  memory.x
.cargo/: config.toml
src/: layout.rs  main.rs
